ProjetCompil/Gencode/Test/success/src/factorial.cas
proGram
	Result : integer;
	Counter : integer;
	N : integer;
	I : 1 .. 13;
BegiN
	N := 7;
	Result := N;
	Counter := N - 1;
	for I := Counter downto 1 do
		Result := Result * I;
		write(Result, " ", I);
		new_line;
	end;
	write(Result);
end.
